# backup_with_restic

./: .backupignore  .envrc  CLAUDE.md  DISASTER_RECOVERY.md  MIGRATION_GUIDE.md  README.md  backup_config.json  example_config.json  pyproject.toml  shell_integration.sh
src/: __init__.py  backup_manager.py  cli.py  keychain_helper.py  main.py  metadata_store.py  models.py  monitor.py  restic_wrapper.py
