[project]
name = "backup_with_restic"
version = "0.1.0"
description = "Enhanced Restic-based backup solution with Git-like semantics"
authors = [{ name = "ab" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "gitpython>=3.1.45",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "ruff>=0.12.4",
    "watchdog>=6.0.0",
]

[project.scripts]
backup = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
